# CoDB

./: CMakeLists.txt  README.md
Plan/: 00_MASTER_PLAN.md  01_mental_models.md  02_phase1_kv_store.md  03_phase2_wal.md  04_phase3_replication.md  05_phase4_quorum.md  06_phase5_sharding.md  07_phase6_failure.md  08_phase7_consensus.md  09_phase8_conflicts.md  10_phase9_lsm.md
proto/: kvstore.proto
scripts/: run_cluster.sh
src/client/: main.cpp
src/replication/: follower_service.cpp  follower_service.h  leader_replicator.cpp  leader_replicator.h  replication_log.cpp  replication_log.h
src/server/: kv_service_impl.cpp  kv_service_impl.h  main.cpp  node_config.h
src/storage/: kv_store.h  mem_kv_store.cpp  mem_kv_store.h  wal_kv_store.cpp  wal_kv_store.h
src/storage/wal/: log_entry.cpp  log_entry.h  log_manager.cpp  log_manager.h  log_reader.cpp  log_reader.h  log_writer.cpp  log_writer.h
